fix: css for extra padding not needed

--- a/static/extremeheat/page2/style.css
+++ b/static/extremeheat/page2/style.css
@@ -968,7 +968,6 @@
 	position: absolute;
 	top: 141px;
 	width: 75px; /* Adjust as needed */
-	height: 30px; /* Adjust as needed */
 	display: flex;
 	flex-wrap: wrap;
 	gap: 4px;
